Virtual machines UI, Virtual machines management UI, and Hardware Engineering UI, finished, functionality needs to be added.